<resources>
    <string name="loading">Loading…</string>
    <string name="synchronizing">Synchronizing…</string>
    <string name="string_ok">OK</string>
    <string name="string_yes">Yes</string>
    <string name="string_bundle">Bundle</string>
    <string name="string_no">No</string>
    <string name="string_continue">Continue</string>
    <string name="string_change">Change</string>
    <string name="string_cancel">CANCEL</string>
    <string name="string_paste">Paste</string>
    <string name="string_paste_address">Paste %1$s</string>
    <string name="string_search">Search</string>
    <string name="string_done">DONE</string>
    <string name="string_rename">Rename</string>
    <string name="string_delete">Delete</string>
    <string name="string_save">Save</string>
    <string name="string_back">BACK</string>
    <string name="string_disable">DISABLE</string>
    <string name="string_next">NEXT</string>
    <string name="string_skip">SKIP</string>
    <string name="string_total">TOTAL:</string>
    <string name="string_finish">FINISH</string>
    <string name="string_help">Help</string>
    <string name="string_info">Info</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_loading">Loading...</string>
    <string name="string_no_transactions">No transactions</string>
    <string name="string_back_button">Back button returns to the previous screen</string>
    <string name="string_help_button">Help button shows help for this screen</string>
    <string name="string_add_button">Add button adds a new wallet</string>
    <string name="string_payment_received">** Payment Received **</string>
    <string name="string_exit_app_question">"Would you like to exit %1$s?"</string>
    <string name="string_too_short">too short</string>
    <string name="string_show_balance">Show Balance</string>
    <string name="string_agree">Agree</string>
    <string name="string_balance">Balance</string>
    <string name="string_wallet">Wallet</string>
    <string name="loading_wallets">Loading Wallets...\nThis may take a few minutes as it is the first time logging into this device.</string>
    <string name="loading_n_wallets">Loading %1$d of %2$d wallets.\nThis may take a few minutes as it is the first time logging into this device.</string>
    <string name="loading_transactions">Loading Transactions...</string>
    <string name="nav_bar_directory_text">DIRECTORY</string>
    <string name="nav_bar_request_text">RECEIVE</string>
    <string name="nav_bar_send_text">SEND</string>
    <string name="nav_bar_wallets_text">WALLETS</string>
    <string name="nav_bar_more_text">MORE</string>
    <string name="calculator_back">&lt;&#160;Del</string>
    <string name="calculator_done">Done</string>
    <string name="string_connection_problem_title">Connection Problem</string>
    <string name="string_no_connection_title">No connection</string>
    <string name="string_no_connection_message">Please turn on WiFi or Mobile Data</string>
    <string name="string_no_connection_pin_message">You are offline but can still login to your account.</string>
    <string name="string_no_connection_response">There is a problem reaching the server. Please try again.</string>
    <string name="string_connection_error_server">Connection Error: Cannot reach server</string>
    <string name="directory_title">Directory</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurants_en" translatable="false">Restaurants</string>
    <string name="restaurant_and_food_trucks">Restaurants &amp; Food Trucks</string>
    <string name="restaurant_and_food_trucks_en" translatable="false">Restaurants &amp; Food Trucks</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="gift_cards_en" translatable="false">Gift Cards</string>
    <string name="coffee_and_tea">Coffee &amp; Tea</string>
    <string name="coffee_and_tea_en" translatable="false">Coffee &amp; Tea</string>
    <string name="electronics">Electronics</string>
    <string name="electronics_en" translatable="false">Electronics</string>
    <string name="atms">ATMs</string>
    <string name="atms_en" translatable="false">ATMs</string>
    <string name="shopping">Shopping</string>
    <string name="shopping_en" translatable="false">Shopping</string>
    <string name="more_categories">More Categories</string>
    <string name="current_location">Current Location</string>
    <string name="current_location_en" translatable="false">Current Location</string>
    <string name="on_the_web">On the Web</string>
    <string name="on_the_web_en" translatable="false">On the Web</string>
    <string name="category_or_business_name_initial">Search</string>
    <string name="category_or_business_name">Business Name or Category</string>
    <string name="city_state_county">City, State/Province, or Country</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location...</string>
    <string name="near_you">Near You</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_location_found">Unable to get a current location. Please enable Location Services.</string>
    <string name="location_enable">Enable</string>
    <string name="fragment_business_no_results">No Results Found</string>
    <string name="fragment_business_cannot_retrieve_data">Can not retrieve data</string>
    <string name="fragment_business_enable_location_services">Enable location services for better results</string>
    <string name="fragment_business_no_categories_retreived">No categories retrieved from server</string>
    <string name="fragment_business_near_you">Near You</string>
    <string name="fragment_take_picture">Picture or File</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="fragment_directory_detail_getting_venue_data">Getting venue data…</string>
    <string name="fragment_directory_detail_timeout_retrieving_data">Timeout retrieving data…</string>
    <string name="fragment_directory_detail_directions">Directions</string>
    <string name="fragment_directory_detail_discount">"Discount "</string>
    <string name="fragment_directory_detail_no_phone">No Activity installed to handle a phone call.</string>
    <string name="fragment_directory_detail_share">"Share"</string>
    <string name="fragment_directory_detail_facebook">"Facebook"</string>
    <string name="fragment_directory_detail_twitter">"Twitter"</string>
    <string name="fragment_directory_detail_yelp">"Yelp"</string>
    <string name="fragment_directory_detail_foursquare">"Foursquare"</string>
    <string name="server_error_account_already_exists">This account already exists.</string>
    <string name="server_error_account_does_not_exists">We were unable to find your account. Be sure your username is correct.</string>
    <string name="server_error_bad_password">Incorrect password.</string>
    <string name="server_error_wallet_exists">Wallet already exists.</string>
    <string name="server_error_invalid_wallet">Wallet does not exist.</string>
    <string name="server_error_no_connection">Unable to connect to server. Please try again later.</string>
    <string name="server_error_no_recovery_questions">No recovery questions are available for this user</string>
    <string name="server_error_not_supported">This operation is not supported.</string>
    <string name="server_error_insufficient_funds">Insufficient funds</string>
    <string name="server_error_synchronizing">Synchronizing with the network.</string>
    <string name="server_error_non_numeric_pin">PIN must be a numeric value.</string>
    <string name="server_error_bad_pin_password">Invalid PIN, Password, or Recovery Answers</string>
    <string name="server_error_bad_pin_login">Invalid PIN. Please log in.</string>
    <string name="server_error_pin_expired">PIN has expired. Please log in.</string>
    <string name="server_error_invalid_pin_wait">Too many failed login attempts. Please try again in %1$s seconds.</string>
    <string name="server_error_other">An error has occurred.</string>
    <string name="server_error_other_formatted">An error has occurred: %d</string>
    <string name="insufficient_amount">Amount too small</string>
    <string name="sys_error_string">Trouble accessing network. Please check network connection</string>
    <string name="account_needs_password_title">WARNING: missing password</string>
    <string name="account_needs_password_message">Account [%1$s] needs a password. Account is not accessible on a new device without a password.</string>
    <string name="fragment_landing_logo_description">An image of the logo</string>
    <string name="fragment_landing_detail_text">Bitcoin Wallet</string>
    <string name="fragment_landing_swipe_text">Swipe to View Business Directory</string>
    <string name="fragment_landing_arrow_description">Bouncing Arrow</string>
    <string name="fragment_landing_username_hint">User Name</string>
    <string name="fragment_landing_password_hint">Password</string>
    <string name="fragment_landing_signin_button">Sign In</string>
    <string name="fragment_landing_signup_button">Sign Up</string>
    <string name="fragment_landing_forgot_password">Forgot Password</string>
    <string name="fragment_landing_current_user">Current User (%1$s)</string>
    <string name="fragment_landing_switch_user">Exit PIN Login</string>
    <string name="fragment_landing_forgot_pin">Forgot PIN</string>
    <string name="fragment_landing_enter_pin">Enter PIN</string>
    <string name="fragment_forgot_no_username_title">User Name Required</string>
    <string name="fragment_forgot_no_account_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_recovery_questions_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_recovery_questions_text">This user does not have any recovery questions set!</string>
    <string name="fragment_setup_contacts_title">Enable Contacts Access</string>
    <string name="fragment_setup_contacts_text">You will next see a popup requesting access to your Contacts.\n\n[[abtag APP_TITLE]] needs this to send payment requests and to help tag your transactions.</string>
    <string name="request_button_import">IMPORT</string>
    <string name="export_title">Export</string>
    <string name="export_csv_title">CSV</string>
    <string name="export_quicken_title">Quicken</string>
    <string name="export_quickbooks_title">Quickbooks</string>
    <string name="export_pdf_title">PDF</string>
    <string name="export_print_title">Wallet Private Seed (advanced)</string>
    <string name="fragment_twofactor_show_enabled">Enabled</string>
    <string name="fragment_twofactor_show_disable_twofa">DISABLE 2FA</string>
    <string name="fragment_twofactor_show_keep_twofa">KEEP 2FA</string>
    <string name="fragment_twofactor_show_instruction">Enable 2-Factor Authentication to increase security by only allowing logins from previously logged in devices. Add more devices by scanning the QR code below after 2FA is enabled</string>
    <string name="fragment_twofactor_show_reset_requested">2FA Reset Requested by another device.</string>
    <string name="fragment_twofactor_show_qr_image_text">Show QR Code</string>
    <string name="drawer_signin_or_signup">Sign In or Sign Up</string>
    <string name="drawer_buy_sell">Buy / Sell Bitcoin</string>
    <string name="drawer_spend_bitcoin">Spend Bitcoin (Plugins)</string>
    <string name="drawer_send">Scan QR Code</string>
    <string name="drawer_request">Request</string>
    <string name="drawer_transactions">Transactions</string>
    <string name="drawer_wallets">Wallets</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_affiliates">REFER YOUR FRIENDS\n(Earn Bitcoin)</string>
    <string name="drawer_directory">Directory</string>
</resources>