<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_twofactor_show_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SettingsFragment">

    <include layout="@layout/layout_toolbar_title" />

    <TextView
        android:id="@+id/fragment_twofactor_instruction_text"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/fragment_twofactor_show_instruction"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/fragment_twofactor_instruction_text"
        android:orientation="vertical">


        <com.airbitz.objects.LimitedEditText
            android:id="@+id/fragment_twofactor_show_password_edittext"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/fragment_landing_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="12.6dp"
            android:paddingRight="12.6dp"
            style="@style/EditText" />

        <Switch
            android:id="@+id/fragment_twofactor_show_toggle_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_twofactor_show_password_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:padding="6dp"
            android:checked="false"
            android:singleLine="true"
            android:switchMinWidth="0dp"
            android:text="@string/fragment_twofactor_show_enabled"
            android:textOff=""
            android:textOn=""
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/fragment_twofactor_button_import"
            android:layout_below="@id/fragment_twofactor_show_toggle_enabled"
            android:layout_width="95dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/request_button_import"
            style="@style/BlueButton"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fragment_twofactor_button_import">

            <RelativeLayout
                android:id="@+id/fragment_twofactor_show_qr_layout"
                android:layout_width="166dp"
                android:layout_height="166dp"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_edge_white_bg" >

                <ImageView
                    android:id="@+id/fragment_twofactor_show_qr_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/fragment_twofactor_show_qr_image_textview"
                    android:text="@string/fragment_twofactor_show_qr_image_text"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/dark_text_link"
                    android:layout_centerInParent="true"/>

                <Button
                    android:id="@+id/fragment_twofactor_show_qr_image_button"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/clear_color"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fragment_twofactor_request_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/fragment_twofactor_button_import"
            android:layout_marginTop="50dp"
            android:background="@color/blue_text">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_twofactor_show_reset_requested"
                android:layout_margin="4dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:visibility="visible" >

                <Button
                    android:id="@+id/fragment_twofactor_show_button_approve"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:text="@string/fragment_twofactor_show_disable_twofa"
                    style="@style/RedButton" />

                <Button
                    android:id="@+id/fragment_twofactor_show_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:text="@string/fragment_twofactor_show_keep_twofa"
                    style="@style/OrangeButton"
                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
