<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_frost"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/fragment_setup_contacts_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/signup_padding_bottom"
            android:paddingTop="@dimen/signup_padding_top">

            <LinearLayout
                android:id="@+id/fragment_setup_contacts_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:focusableInTouchMode="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="54dp">

                <TextView
                    android:id="@+id/fragment_setup_contacts_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="6.3dp"
                    android:paddingRight="6.3dp"
                    android:text="@string/fragment_setup_contacts_title"
                    android:textColor="@color/dark_text"
                    android:textSize="18dp" />


                <ImageView
                    android:id="@+id/fragment_setup_contacts_image"
                    android:layout_width="@dimen/setup_image_size"
                    android:layout_height="@dimen/setup_image_size"
                    android:layout_weight="1"
                    android:src="@drawable/enable_contacts"
                    android:scaleType="centerInside" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/fragment_setup_contacts_show_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/fragment_setup_contacts_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="6.3dp"
                            android:paddingRight="6.3dp"
                            android:text="@string/fragment_setup_contacts_text"
                            android:textColor="@color/dark_text"
                            android:textSize="16dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </RelativeLayout>


                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_decide"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/fragment_setup_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_next"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:visibility="visible"
            style="@style/GreenButton"/>

    </RelativeLayout>

    <include layout="@layout/layout_toolbar_header" />



</RelativeLayout>
